--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.5",
+    "@types/googlemaps": "^3.43.2",
     "gh-pages": "^3.1.0"
   }
 }
