--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.11.4",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.6.0",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
+    "sass": "^1.49.8",
     "typescript": "^4.1.2",
-    "use-debounce": "^6.0.0",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^1.0.1",
     "wouter": "^2.7.4"
   },
@@ -51,6 +47,8 @@
   "devDependencies": {
     "@types/bootstrap": "^5.0.5",
     "@types/googlemaps": "^3.43.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "gh-pages": "^3.1.0"
   }
 }
